# open_source

./: .gitignore  README.md
kernel/: .sysmon.ko.cmd  .sysmon.mod.cmd  .sysmon.mod.o.cmd  .sysmon.o.cmd  Makefile  modules.order  sysmon.c  sysmon.ko  sysmon.mod  sysmon.mod.c
pico-freertos-example/: .gitignore  CMakeLists.txt  CMakePresets.json  FreeRTOSConfig.h  README.md  app_state.c  app_state.h  dht11.c  dht11.h  dip_switch.c  dip_switch.h  lwipopts.h  main.c  switch_sound.c  switch_sound.h  tm1637.c  tm1637.h  web_server.c  web_server.h
user/: dashboard.py  monitor.py  sysmon_data.py
